# ds_api-review-tool

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_analysis.py
src/: __init__.py  cli.py
src/analyzers/: __init__.py  docs_diff_analyzer.py  gap_analyzer.py  scope_analyzer.py
src/models/: __init__.py  endpoint.py  scope.py  test_result.py
src/parsers/: __init__.py  angular_scopes.py  laravel_routes.py  openapi_spec.py  published_spec.py
src/reporters/: __init__.py  console_report.py  csv_report.py  markdown_report.py
src/testers/: __init__.py
tests/: __init__.py  conftest.py
